2006-05-01  Lillian Angel  <langel@redhat.com>

	* gnu/javax/swing/text/html/parser/support/Parser.java
	(readAttributes): Formatted function. Added handling for 
	SLASH token. The value of an attribute may start with a slash
	(i.e. a path). I added handling similar to to the NUMTOKEN code.
	We should not be skipping over these type of attributes.

2006-04-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* include/gnu_java_awt_peer_gtk_GThreadNativeMethodRunner.h,
	* include/gnu_java_awt_peer_gtk_GdkFontPeer.h,
	* include/gnu_java_awt_peer_gtk_GdkGraphics.h,
	* include/gnu_java_awt_peer_gtk_GdkGraphics2D.h,
	* include/gnu_java_awt_peer_gtk_GdkGraphicsEnvironment.h,
	* include/gnu_java_awt_peer_gtk_GdkPixbufDecoder.h,
	* include/gnu_java_awt_peer_gtk_GdkRobotPeer.h,
	* include/gnu_java_awt_peer_gtk_GdkTextLayout.h,
	* include/gnu_java_awt_peer_gtk_GtkButtonPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkCanvasPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkCheckboxGroupPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkCheckboxMenuItemPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkCheckboxPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkChoicePeer.h,
	* include/gnu_java_awt_peer_gtk_GtkClipboard.h,
	* include/gnu_java_awt_peer_gtk_GtkComponentPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkEmbeddedWindowPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkFileDialogPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkFramePeer.h,
	* include/gnu_java_awt_peer_gtk_GtkGenericPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkImage.h,
	* include/gnu_java_awt_peer_gtk_GtkLabelPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkListPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkMenuBarPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkMenuComponentPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkMenuItemPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkMenuPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkPanelPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkPopupMenuPeer.h,
	* include/gnu_java_awt_peer_gtk_GtkScrollPanePeer.h,